<resources>

    <string name="app_name">Cinema</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_screen">MainScreen</string>

    <string name="menu_phones">phones</string>
    <string name="menu_geolocation">geolocation</string>
    <string name="menu_push">push notification</string>
    <string name="menu_selected">selected</string>
    <string name="menu_from_internet">internet</string>
    <string name="search">button_search</string>

</resources>