<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuPhones"
        android:title="@string/menu_phones"
        app:showAsAction="never" >
    </item>

    <item
        android:id="@+id/menuGeolocation"
        android:title="@string/menu_geolocation"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuPush"
        android:title="@string/menu_push"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuSelected"
        android:title="@string/menu_selected"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuInternet"
        android:title="@string/menu_from_internet"
        app:showAsAction="always" />

</menu>
